@@ -1,3 +1,10 @@
+2007-02-09  Zack Weinberg  <zackw@panix.com>
+
+	* cmd_files.cc (annotate): Handle multi-parent workspaces gracefully.
+	Add lengthy comment about why multi-parent annotate doesn't work.
+	* tests/two_parent_workspace_annotate: New xfailed test.
+	* testsuite.lua: Update.
+
 2007-02-07  Zack Weinberg  <zackw@panix.com>
 
 	* work.cc (perform_rename): Work in a two-parent workspace.
